add libpoppler for misp-modules - pdftotext.cpp:3:10: fatal error: poppler/cpp/poppler-document.h

--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -59,6 +59,7 @@ misp_pkg_list:
     - openjpeg-devel
     - rubygem-rouge
     - rubygem-asciidoctor
+    - poppler-cpp-devel
 
 easy_install_bin: easy_install-3.6
 python3_bin: python36
