--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -60,6 +60,7 @@ misp_pkg_list:
     - rubygem-rouge
     - rubygem-asciidoctor
     - poppler-cpp-devel
+    - libXrender
 
 easy_install_bin: easy_install-3.6
 python3_bin: python36
