RedHat/misp-modules: few more dependencies

--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -59,6 +59,8 @@ misp_pkg_list:
     - openjpeg-devel
     - rubygem-rouge
     - rubygem-asciidoctor
+    - libSM
+    - zbar
     - poppler-cpp-devel
     - libXrender
 
