add specific handlers to restart apache inside docker - ignore_errors, pkill

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -16,6 +16,7 @@
     APACHE_LOCK_DIR: /var/lock/apache2
     APACHE_LOG_DIR: /var/log/apache2
     LANG: C
+  ignore_errors: true
   when:
     - (ansible_virtualization_type is defined and ansible_virtualization_type == "docker")
     - ansible_os_family == "Debian"
@@ -23,8 +24,9 @@
 - name: restart webserver - docker,redhat
   command: "{{ item }}"
   with_items:
-    - killall httpd
+    - pkill httpd
     - /usr/sbin/httpd -k start
+  ignore_errors: true
   when:
     - (ansible_virtualization_type is defined and ansible_virtualization_type == "docker")
     - ansible_os_family == "RedHat"
