--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -244,7 +244,7 @@
 - name: setting core.filemode for git
   git_config:
     name: core.filemode
-    value: false
+    value: 'false'
     scope: local
     repo: "{{ misp_rootdir }}"
 
