--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ env:
   - distribution: ubuntu
     version: 18.04
     suite: default
-  - distribution: ubuntu
-    version: 16.04
-    suite: default
+#  - distribution: ubuntu
+#    version: 16.04
+#    suite: default
 #  - distribution: ubuntu
 #    version: 14.04
 #  - distribution: ubuntu
