--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -32,8 +32,8 @@ platforms:
     driver_config:
 # https://github.com/test-kitchen/kitchen-docker/issues/285
       provision_command: mkdir -p /run/sshd
-  - name: ubuntu-16.04
-  - name: ubuntu-14.04
+#  - name: ubuntu-16.04
+#  - name: ubuntu-14.04
   - name: centos-7
 #  - name: alpine-3.6
 
