--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,8 +27,8 @@ provisioner:
 
 platforms:
   - name: ubuntu-18.04
-  - name: ubuntu-16.04
-  - name: ubuntu-14.04
+#  - name: ubuntu-16.04
+#  - name: ubuntu-14.04
 #  - name: ubuntu-12.04
   - name: centos-7
 ## httpd/centos7/capability issue on lxc
