misp-modules: enforce latest pymisp - replace

--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -28,10 +28,10 @@
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'
 
 - name: Enforce latest PyMISP
-  lineinfile:
+  replace:
     dest: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
     regexp: '^-e git+https://github.com/MISP/PyMISP.git.*'
-    line: '-e git+https://github.com/MISP/PyMISP.git#egg=pymisp'
+    replace: '-e git+https://github.com/MISP/PyMISP.git#egg=pymisp'
     state: present
     backup: yes
 
