--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,7 +20,10 @@ misp_config_php_template: config.php.j2
 
 misp_pip_cybox_version: '2.1.0.17'
 misp_pip_stix_version: '1.2.0.6'
-misp_pymisp_version: 'v2.4.112'
+# overridden by misp-modules REQUIREMENTS
+misp_pymisp_version: 'v2.4.113'
+# HEAD in misp-modules REQUIREMENTS
+misp_latest_pymisp: false
 
 ## for automation of users creation and testing
 misp_key_file: "{{ misp_rootdir }}/.ht_key"
