lief: use python3 pip

--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -5,6 +5,7 @@
   pip:
     name: lief
     state: present
+    executable: "{{ python3_pip }}"
   when: ansible_os_family == 'Debian'
   register: pkg_result
   until: pkg_result is success
