separate virtualenv from MISP root (2)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,8 +8,8 @@ install_archives: /var/_install
 ## branch or tags to use
 #misp_version: 'HEAD'
 misp_version: '2.4'
-misp_rootdir: /var/www/MISP
-misp_virtualenv: /var/www/MISP/venv
+misp_rootdir: /var/www/_MISP/MISP
+misp_virtualenv: /var/www/_MISP/venv
 mispmodules_rootdir: /opt
 misp_webserver: 'apache2'
 #misp_webserver: 'nginx'
